--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
   </style>
 </head>
 <body>
-
-<h1>📖 Flashcards – Nossa Família Celestial</h1>
-<div class="subtitle">Somos filhos e filhas de nosso Pai Celestial — clique nos cartões para abrir.</div>
-
+<h1>📖FLASHCARDS – Princípios do Evangelho (LDS)</h1>
+<div class="subtitle"><b>Capítulo 2 - Nossa Família Celestial</b></div>
 <div class="categories">
   <button class="category-btn simple-btn" onclick="filterCards('simple')">Somos Filhos</button>
   <button class="category-btn compound-btn" onclick="filterCards('compound')">Talentos no Céu</button>
